--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Prueba Tecnica</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-    
+    <h1>Prueba Tecnica</h1>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam nesciunt ut quibusdam magni repellat perspiciatis! Quas possimus totam minima sed sunt doloremque facere explicabo recusandae, beatae iusto incidunt error. Rerum!</h2>
+    <div class="card-container">
+        <div class="card">
+            <div class="card-content">
+                <h2 class="titulo-card">Titulo de la card</h2>
+                <p class="texto-card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque est deserunt, obcaecati nulla mollitia id aliquam ex consequuntur maxime, expedita adipisci sed officiis! Quaerat, nam blanditiis. Non hic ex itaque!</p>
+
+            </div>
+        </div>
+    </div>
 </body>
 </html>
